# trackly

./: .gitignore  README.md  docker-compose.aarch64.prod.yaml  docker-compose.amd64.prod.yaml  docker-compose.dev.yaml  docker-compose.yml
.github/agents/: README.md  cloud-agent.yml
.github/workflows/: build.yaml  test.yaml
backend/: Cargo.toml  Dockerfile  schema.sql
backend/migrations/: 20250101000000_initial_schema.sql  20250101200000_add_speed_pace_data.sql  20250110000000_add_poi_tables.sql  20250522171102_add_recorded_at_to_tracks.sql  20250606075545_add_auto_classifications_to_tracks.sql  20250623145227_add_time_data_to_tracks.sql  20250624173058_add_temp_data_to_tracks.sql  20250820143138_add_hash_index.sql  20250905095811_add_tolerance_for_zoom_function.sql  20250908080156_add_elevation_fields.sql  20250908091533_add_elevation_index.sql  20250908130000_migrate_elevation_data.sql  20250909000000_add_slope_fields.sql  20250909150347_add_slope_segments_field.sql  20251207000000_support_multiline_tracks.sql  20251208000000_fix_poi_distance_for_multiline.sql
backend/src/: db.rs  handlers.rs  input_validation.rs  lib.rs  logging.rs  main.rs  metrics.rs  models.rs  poi_deduplication.rs  test_utils.rs  track_classifier.rs  track_utils.rs
backend/src/db/: api_usage.rs  mod.rs  tracks.rs
backend/src/services/: enrichment_queue.rs  gpx_export.rs  mod.rs  track_upload.rs
backend/src/track_utils/: elevation.rs  elevation_enrichment.rs  geometry.rs  gpx_parser.rs  hash.rs  kml_parser.rs  metrics.rs  mod.rs  optimized_gpx_parser.rs  pace_filter.rs  simplification.rs  slope.rs  time_utils.rs  types.rs  zoom_adaptation.rs  zoom_adaptation_tests.rs
backend/tests/: db.rs  enrichment_queue_integration.rs  handlers.rs  models.rs  search.rs  track_optimization_tests.rs  track_utils.rs
docs/: categories-edit-ui-improvements.md  observability.md  poi-implementation-guide.md  poi-markers-specification.md
frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  test-format-duration.js  vite.config.js  vitest.config.js
frontend/e2e/: export-rate-limit.spec.ts  setup-real-tracks.ts  track-categories-edit.spec.ts  track.spec.ts
frontend/e2e/fixtures/: track-detail-multi.json  track-detail-single.json  track-detail.json
frontend/public/: robots.txt  sitemap.xml
frontend/scripts/: check-seo.cjs  check-seo.js
frontend/src/: App.vue  leaflet-patch.js  main.js  test-setup.js
frontend/src/__mocks__/: asset-stub.js  leaflet.js
frontend/src/components/: ConfirmDialog.vue  ConfirmDialogProvider.vue  ElevationChart.vue  GeolocationButton.vue  PoiClusterGroup.vue  PoiMarker.vue  SearchButton.vue  SlopeLegend.vue  Toast.vue  TrackDetailPanel.vue  TrackDirectionLayer.vue  TrackDistanceMarkers.vue  TrackEndpoints.vue  TrackFilterControl.vue  TrackLayer.vue  TrackMap.vue  TrackSearch.vue  TrackTooltip.vue  UploadForm.vue  VirtualTrackPointsList.vue
frontend/src/components/__tests__/: ConfirmDialog.test.js  ElevationChart.test.js  GeolocationButton.test.js  TrackDetailPanel.spec.js  TrackDetailPanel.test.js  TrackEndpoints.test.js  TrackFilterControl.test.js  TrackMap.test.js  TrackSearch.spec.js  TrackTooltip.test.js  UploadForm.test.js
frontend/src/composables/: useAdvancedDebounce.js  useConfirm.js  useMapUrlState.js  useMemoization.js  usePois.js  useSearchState.js  useToast.js  useTrackClustering.js  useTracks.js  useUnits.js  useVirtualizedList.js
frontend/src/composables/__tests__/: HomeView.integration.test.js  useAdvancedDebounce.test.js  useMapUrlState.test.js  useMemoization.test.js  usePois.test.js  useToast.test.js  useTrackClustering.test.js  useTracks.composable.test.js  useTracks.test.js  useTracks.upload.test.js  useUnits.test.js  useVirtualizedList.test.js
frontend/src/router/: index.js
frontend/src/styles/: track-clustering.css  track-overlays.css
frontend/src/test/: smoke.test.js
frontend/src/types/: e2e.d.ts
frontend/src/utils/: format.js  gapVisualization.js  mapConstants.js  mapPerformance.js  session.js  slopeColors.js  string.js  trackColors.js  trackGeometry.js
frontend/src/utils/__tests__/: dateUtils.test.js  format.test.js  session.test.js  (+1 more)
frontend/src/views/: E2ETrackTest.vue  HomeView.vue  TrackView.vue
frontend/test/: gapVisualization.test.js  mapPerformance.test.js  pace-functionality.test.js  pace-integration.test.js
frontend/test-results/: .last-run.json
frontend/test/components/: ElevationChart.test.js  TrackDetailPanel.slope.test.js  TrackFilterControl.test.js
frontend/test/integration/: slope.integration.test.js  upload-track-fetch.integration.test.js
frontend/test/utils/: slopeColors.test.js  trackGeometry.test.js
observability/: README.md  alerts.yml  backend-api-grafana-dashboard.json  backend-product-grafana-dashboard.json  caddy-grafana-dashboard.json  platform-grafana-dashboard.json  postgres-grafana-dashboard.json  recording_rules.yml  vmagent.yml
observability/dashboards/: caddy-frontend.json  product-metrics.json  technical-metrics.json
(+4 files in other folders)
