[package]
name = "backend"
version = "0.2.2"
edition = "2021"

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"
bytes = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
once_cell = "1.21.3"
mimalloc = "0.1.48"
prometheus = "0.14.0"
# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
# HTTP client
reqwest = { version = "0.12.25", default-features = false, features = [
    "json",
    "rustls-tls",
] }
ammonia = "4.1.2"
# File parsing
quick-xml = "0.38.4"
kml = "0.12.0"
geo = "0.32.0"
geo-types = "0.7.18"
# Multipart
axum-extra = { version = "0.12.2", features = ["multipart", "typed-header"] }
sha2 = "0.10.9"
tokio-util = "0.7.17"

# For tests
[dev-dependencies]
assert_approx_eq = "1.1.0"
mockito = "1.7.1"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 16

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
